--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#035cc9</color>
+    <color name="colorPrimaryDark">#004ca9</color>
+    <color name="colorAccent">#ffc340</color>
+
+    <color name="gradientStart">#3089cd</color>
+    <color name="gradientEnd">#004ca9</color>
 </resources>
