--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -1,47 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_new_product"
+    android:id="@+id/activity_purchase"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.huebeiro.stockontrol.NewProductActivity">
+    tools:context="com.huebeiro.stockontrol.ExpenseActivity">
 
-    <EditText
-        android:id="@+id/editName"
+    <Spinner
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textNoSuggestions"
-        android:maxLength="15"
-        android:hint="Name"
-        android:ems="10"
+        android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:id="@+id/spinProduct" />
 
     <EditText
-        android:id="@+id/editDescription"
+        android:id="@+id/editQuantity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:layout_below="@+id/spinProduct"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:hint="Quantity" />
+
+    <EditText
+        android:id="@+id/editNote"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textNoSuggestions"
         android:maxLength="100"
         android:maxLines="2"
         android:ems="10"
-        android:layout_below="@+id/editName"
+        android:layout_below="@+id/editQuantity"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="Description" />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@+id/editDescription"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/spinType" />
+        android:hint="Note" />
 
     <LinearLayout
         android:layout_alignParentBottom="true"
@@ -50,11 +49,11 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:text="Register"
+            android:text="Purchase"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:id="@+id/btnRegister" />
+            android:id="@+id/btnPurchase" />
         <Button
             android:text="Cancel"
             android:layout_width="0dp"
@@ -62,5 +61,4 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnCancel" />
     </LinearLayout>
-
 </RelativeLayout>
